Set proxy pass reverse (and rename role)

--- a/deploy/roles/deploy/templates/reverse-proxy.conf
+++ b/deploy/roles/deploy/templates/reverse-proxy.conf
@@ -57,9 +57,12 @@ Alias /assets {{madek_webapp_dir}}/public/assets
   '/zencoder_jobs',
   ] %}
 ProxyPass {{ path }} http://localhost:{{ madek_webapp_port }}{{ path }} nocanon retry=1
+ProxyPassReverse {{ path }} http://localhost:{{ madek_webapp_port }}{{ path }}
 {% endfor %}
 
 ProxyPassMatch ^/(.*)$ http://localhost:{{madek_webapp_port}}/$1 nocanon retry=1
+ProxyPassReverse ^/(.*)$ http://localhost:{{madek_webapp_port}}/$1
+
 
 
 # vi: ft=apache
