Auto restart service after datalayer

--- a/deploy/roles/deploy/templates/madek-webapp.service
+++ b/deploy/roles/deploy/templates/madek-webapp.service
@@ -32,5 +32,6 @@ ExecStart={{madek_webapp_ruby_dir}}/bin/ruby -S \
 
 [Install]
 WantedBy=multi-user.target
+WantedBy=madek-datalayer.service
 
 # vim: ft=systemd
