chore: update to rails 7.1

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -18,6 +18,8 @@ webapp_embeds:
 
 # this is only relevant for zhdk instances, it is defined here for local development:
 ui_bundle_context_keys:
-- { group: 'media_content:portrayed_object_location', prefix: 'media_content:portrayed_object_' }
-- { group: 'media_object:creator', prefix: 'media_object:creator_'}
-- { group: 'madek_core:copyright_notice', prefix: 'madek_core:copyright_'}
+  - { group: 'media_content:portrayed_object_location', prefix: 'media_content:portrayed_object_' }
+  - { group: 'media_object:creator', prefix: 'media_object:creator_' }
+  - { group: 'madek_core:copyright_notice', prefix: 'madek_core:copyright_' }
+
+madek_support_email: 'support@example.com'
