--- a/cider-ci/generators/plain_features.yml
+++ b/cider-ci/generators/plain_features.yml
@@ -1939,30 +1939,37 @@
   environment_variables:
     RSPEC_NAME: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb:36"
     RSPEC_TEST: "./spec/features/media_entry/permissions/show_users_as_deactivated_spec.rb[1:2]"
-"./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1]":
-  name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1]"
-  description: 'Resource: MetaDatum MetaDatumPeople add new Person'
+"./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:1]":
+  name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:1]"
+  description: 'Resource: MetaDatum MetaDatumPeople With existing data add new Person'
   environment_variables:
-    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:28"
-    RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1]"
+    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:32"
+    RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:1]"
+"./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:2]":
+  name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:2]"
+  description: 'Resource: MetaDatum MetaDatumPeople With existing data add new PeopleGroup'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:40"
+    RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:2]"
+"./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:3]":
+  name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:3]"
+  description: 'Resource: MetaDatum MetaDatumPeople With existing data add new Person
+    and PeopleGroup'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:48"
+    RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:3]"
+"./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:4]":
+  name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:4]"
+  description: 'Resource: MetaDatum MetaDatumPeople With existing data add PeopleInstitutionalGroup'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:58"
+    RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:1:4]"
 "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:2]":
   name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:2]"
-  description: 'Resource: MetaDatum MetaDatumPeople add new PeopleGroup'
+  description: 'Resource: MetaDatum MetaDatumPeople People sort order'
   environment_variables:
-    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:36"
+    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:80"
     RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:2]"
-"./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:3]":
-  name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:3]"
-  description: 'Resource: MetaDatum MetaDatumPeople add new Person and PeopleGroup'
-  environment_variables:
-    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:44"
-    RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:3]"
-"./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:4]":
-  name: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:4]"
-  description: 'Resource: MetaDatum MetaDatumPeople add PeopleInstitutionalGroup'
-  environment_variables:
-    RSPEC_NAME: "./spec/features/meta_data/inputs/input_groups_people_spec.rb:54"
-    RSPEC_TEST: "./spec/features/meta_data/inputs/input_groups_people_spec.rb[1:1:4]"
 "./spec/features/meta_data/inputs/input_json_spec.rb[1:1:1]":
   name: "./spec/features/meta_data/inputs/input_json_spec.rb[1:1:1]"
   description: 'Resource: MetaDatum MetaDatum::JSON add new JSON as text'
@@ -2121,14 +2128,19 @@
   environment_variables:
     RSPEC_NAME: "./spec/features/meta_data/inputs/input_keywords_spec.rb:258"
     RSPEC_TEST: "./spec/features/meta_data/inputs/input_keywords_spec.rb[1:2:2:5]"
-"./spec/features/meta_data/inputs/input_keywords_spec.rb[1:2:3:1]":
-  name: "./spec/features/meta_data/inputs/input_keywords_spec.rb[1:2:3:1]"
+"./spec/features/meta_data/inputs/input_keywords_spec.rb[1:2:3]":
+  name: "./spec/features/meta_data/inputs/input_keywords_spec.rb[1:2:3]"
   description: 'Resource: MetaDatum Different keyword selection types (include saving)
-    with silent server errors server throws when selecting multiple for single select
-    field'
+    Server throws when selecting multiple for single select field'
   environment_variables:
-    RSPEC_NAME: "./spec/features/meta_data/inputs/input_keywords_spec.rb:279"
-    RSPEC_TEST: "./spec/features/meta_data/inputs/input_keywords_spec.rb[1:2:3:1]"
+    RSPEC_NAME: "./spec/features/meta_data/inputs/input_keywords_spec.rb:269"
+    RSPEC_TEST: "./spec/features/meta_data/inputs/input_keywords_spec.rb[1:2:3]"
+"./spec/features/meta_data/inputs/input_keywords_spec.rb[1:3]":
+  name: "./spec/features/meta_data/inputs/input_keywords_spec.rb[1:3]"
+  description: 'Resource: MetaDatum Keyword sort order'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/meta_data/inputs/input_keywords_spec.rb:285"
+    RSPEC_TEST: "./spec/features/meta_data/inputs/input_keywords_spec.rb[1:3]"
 "./spec/features/meta_data/inputs/input_media_entry_spec.rb[1:1:1]":
   name: "./spec/features/meta_data/inputs/input_media_entry_spec.rb[1:1:1]"
   description: 'Resource: MetaDatum MetaDatum::MediaEntry add new valid ID with description'
