--- a/cider-ci/generators/plain_features.yml
+++ b/cider-ci/generators/plain_features.yml
@@ -288,7 +288,7 @@
   name: "./spec/features/batch_edit/batch_dropdown_spec.rb[1:2]"
   description: Batch dropdown Check dropdown menu and for `beta_test_quick_edit` group
   environment_variables:
-    RSPEC_NAME: "./spec/features/batch_edit/batch_dropdown_spec.rb:102"
+    RSPEC_NAME: "./spec/features/batch_edit/batch_dropdown_spec.rb:106"
     RSPEC_TEST: "./spec/features/batch_edit/batch_dropdown_spec.rb[1:2]"
 "./spec/features/batch_edit/batch_edit_metadata_spec.rb[1:1]":
   name: "./spec/features/batch_edit/batch_edit_metadata_spec.rb[1:1]"
@@ -308,6 +308,31 @@
   environment_variables:
     RSPEC_NAME: "./spec/features/batch_edit/batch_edit_metadata_spec.rb:51"
     RSPEC_TEST: "./spec/features/batch_edit/batch_edit_metadata_spec.rb[1:3]"
+"./spec/features/batch_edit/batch_edit_title_spec.rb[1:1]":
+  name: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:1]"
+  description: batch edit title show and edit published entries
+  environment_variables:
+    RSPEC_NAME: "./spec/features/batch_edit/batch_edit_title_spec.rb:20"
+    RSPEC_TEST: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:1]"
+"./spec/features/batch_edit/batch_edit_title_spec.rb[1:2]":
+  name: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:2]"
+  description: batch edit title show and edit unpublished but complete entry (autopublish)
+  environment_variables:
+    RSPEC_NAME: "./spec/features/batch_edit/batch_edit_title_spec.rb:52"
+    RSPEC_TEST: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:2]"
+"./spec/features/batch_edit/batch_edit_title_spec.rb[1:3]":
+  name: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:3]"
+  description: batch edit title show and edit incomplete entry (no autopublish)
+  environment_variables:
+    RSPEC_NAME: "./spec/features/batch_edit/batch_edit_title_spec.rb:80"
+    RSPEC_TEST: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:3]"
+"./spec/features/batch_edit/batch_edit_title_spec.rb[1:4]":
+  name: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:4]"
+  description: batch edit title show and edit incomplete entry, with default text
+    filling (so autopublish works)
+  environment_variables:
+    RSPEC_NAME: "./spec/features/batch_edit/batch_edit_title_spec.rb:110"
+    RSPEC_TEST: "./spec/features/batch_edit/batch_edit_title_spec.rb[1:4]"
 "./spec/features/batch_edit/batch_linking_spec.rb[1:1]":
   name: "./spec/features/batch_edit/batch_linking_spec.rb[1:1]"
   description: Batch linking Add to set
@@ -460,7 +485,7 @@
   name: "./spec/features/clipboard_spec.rb[1:5]"
   description: clipboard add selected to clipboard
   environment_variables:
-    RSPEC_NAME: "./spec/features/clipboard_spec.rb:61"
+    RSPEC_NAME: "./spec/features/clipboard_spec.rb:62"
     RSPEC_TEST: "./spec/features/clipboard_spec.rb[1:5]"
 "./spec/features/collection/collection_context_tabs_spec.rb[1:1]":
   name: "./spec/features/collection/collection_context_tabs_spec.rb[1:1]"
