fixing precompilation WIP

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "watch": "mkdir -p public/assets/bundles && npm run -s watch:app",
     "watch-all": "mkdir -p public/assets/bundles && npm run -s watch:app & npm run -s watch:app-embedded-view & npm run -s watch:server",
     "build": "mkdir -p public/assets/bundles && npm run -s build:app && npm run -s build:app-embedded-view && npm run -s build:server && npm run -s build:integration",
-    "watch:app": "NODE_ENV=development watchify app/javascript/application.coffee -d -v -o public/assets/bundles/dev-bundle.js",
+    "watch:app": "NODE_ENV=development watchify app/javascript/application.js -d -v -o public/assets/bundles/dev-bundle.js",
     "watch:app-embedded-view": "NODE_ENV=development watchify app/javascript/embedded-view.js -d -v -o public/assets/bundles/dev-bundle-embedded-view.js",
     "watch:server": "NODE_ENV=development watchify app/javascript/react-server-side.js -d -v -o public/assets/bundles/dev-bundle-react-server-side.js",
-    "build:app": "NODE_ENV=production browserify app/javascript/application.coffee -v -o public/assets/bundles/bundle.js",
+    "build:app": "NODE_ENV=production browserify app/javascript/application.js -v -o public/assets/bundles/bundle.js",
     "build:app-embedded-view": "NODE_ENV=production browserify app/javascript/embedded-view.js -v -o public/assets/bundles/bundle-embedded-view.js",
     "build:dev-app-embedded-view": "NODE_ENV=development browserify app/javascript/embedded-view.js -v -o public/assets/bundles/dev-bundle-embedded-view.js",
     "build:server": "NODE_ENV=production browserify app/javascript/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
