--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "build:dev-app-embedded-view": "NODE_ENV=development browserify app/javascript/embedded-view.js -v -o public/assets/bundles/dev-bundle-embedded-view.js",
     "build:server": "NODE_ENV=production browserify app/javascript/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
     "build:server:dev": "NODE_ENV=development browserify app/javascript/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
-    "build:integration": "NODE_ENV=production browserify app/javascript/integration-testbed.coffee -v -o public/assets/bundles/bundle-integration-testbed.js",
+    "build:integration": "NODE_ENV=production browserify app/javascript/integration-testbed.js -v -o public/assets/bundles/bundle-integration-testbed.js",
     "test": "npm run -s lint",
     "lint": "bash -c 'npm run -s coffeelint -- --quiet app/javascript/**/*.coffee app/javascript/react/**/*.cjsx && npm run -s standardlint -- {.,**}/*.js'",
     "format": "prettier-standard 'app/javascript/**/*.js'",
     "devtools": "NODE_ENV=development npm run -s build-devtools && coffee --nodejs \"-r ./tmp/devtools.js\"",
     "devtools-js": "NODE_ENV=development npm run -s build-devtools && node -r ./tmp/devtools.js",
-    "build-devtools": "NODE_ENV=production npm run -s browserify -- app/javascript/developer-tools.coffee > tmp/devtools.js",
+    "build-devtools": "NODE_ENV=production npm run -s browserify -- app/javascript/developer-tools.js > tmp/devtools.js",
     "coffeelint": "coffeelint",
     "standardlint": "standard",
     "browserify": "browserify"
