--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "build:server": "NODE_ENV=production browserify app/javascript/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
     "build:server:dev": "NODE_ENV=development browserify app/javascript/react-server-side.js -v -o public/assets/bundles/bundle-react-server-side.js",
     "build:integration": "NODE_ENV=production browserify app/javascript/integration-testbed.js -v -o public/assets/bundles/bundle-integration-testbed.js",
-    "test": "npm run -s lint",
-    "lint": "npm run -s standardlint -- 'app/javascript/**/*.{js,jsx}'",
-    "format": "prettier-standard 'app/javascript/**/*.js'",
+    "lint": "eslint 'app/javascript/**/*.{js,jsx}'",
+    "lint:fix": "eslint --fix 'app/javascript/**/*.{js,jsx}'",
     "devtools": "NODE_ENV=development npm run -s build-devtools",
     "devtools-js": "NODE_ENV=development npm run -s build-devtools && node -r ./tmp/devtools.js",
     "build-devtools": "NODE_ENV=production npm run -s browserify -- app/javascript/developer-tools.js > tmp/devtools.js",
-    "standardlint": "standard",
     "browserify": "browserify"
   },
   "dependencies": {
@@ -85,8 +83,6 @@
     "i18n-iso-countries": "^1.11.0",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.2.1",
-    "prettier-standard": "^6.0.0",
-    "standard": "^10.0.2",
     "watchify": "^4.0.0"
   },
   "browserify": {
@@ -146,14 +142,27 @@
       "eslint:recommended",
       "prettier",
       "prettier/react",
-      "prettier/standard",
       "plugin:react/recommended"
     ],
     "rules": {
       "prettier/prettier": [
         "error"
       ],
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react/no-deprecated": "warn",
+      "no-unused-vars": "warn",
+      "react/jsx-key": "warn",
+      "react/no-render-return-value": "warn",
+      "react/jsx-no-duplicate-props": "warn",
+      "react/no-string-refs": "warn",
+      "react/no-is-mounted": "warn",
+      "no-console": "warn",
+      "react/display-name": "warn",
+      "react/no-find-dom-node": "warn"
+    },
+    "globals": {
+      "$": "readonly",
+      "APP_CONFIG": "readonly"
     }
   }
 }
