fix: supressed flash message

--- a/cider-ci/generators/plain_features.yml
+++ b/cider-ci/generators/plain_features.yml
@@ -1353,6 +1353,13 @@
   environment_variables:
     RSPEC_NAME: "./spec/features/media_entry/media_entry_context_meta_data_edit_spec.rb:112"
     RSPEC_TEST: "./spec/features/media_entry/media_entry_context_meta_data_edit_spec.rb[1:1:7]"
+"./spec/features/media_entry/media_entry_context_meta_data_edit_spec.rb[1:1:8:1:1]":
+  name: "./spec/features/media_entry/media_entry_context_meta_data_edit_spec.rb[1:1:8:1:1]"
+  description: 'Resource: MediaEntry Concern: MetaData Flashs visible when admin mode
+    is toggled displays not published warning and admin mode notification'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/media_entry/media_entry_context_meta_data_edit_spec.rb:153"
+    RSPEC_TEST: "./spec/features/media_entry/media_entry_context_meta_data_edit_spec.rb[1:1:8:1:1]"
 "./spec/features/media_entry/media_entry_delete_spec.rb[1:1:1]":
   name: "./spec/features/media_entry/media_entry_delete_spec.rb[1:1:1]"
   description: 'Resource: MediaEntry Action: delete via delete button on detail view
